--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,23 @@ body {
   color: #fff;
   padding: .5em;
   border-radius: 1em;
-  text-decoration: none;
+}
+
+.nav a:focus {
+  outline: .5rem solid #fff;
+}
+
+.nav a:hover, .nav a:focus {
+  background-color: #bea59b;
+}
+
+h2 a:hover, h2 a:focus {
+  background-color: #522806;
+  color: #fff;
+}
+
+.banner a:focus {
+  outline: .5rem solid #fff;
 }
 
 .banner {
@@ -63,6 +79,7 @@ body {
   grid-template-areas: "banner";
   color: #fff;
   font-size: 1.5rem;
+  background-color: #522806;
 }
 
 .banner img {
